@@ -1,7 +1,7 @@
 /*
  * Copyright (c) 1996, 1997, 1998, 1999
  *             Shigio Yamaguchi. All rights reserved.
- * Copyright (c) 1999, 2000, 2001
+ * Copyright (c) 1999, 2000, 2001, 2002
  *             Tama Communications Corporation. All rights reserved.
  *
  * This file is part of GNU GLOBAL.
@@ -25,6 +25,7 @@
 #define _GLOBAL_H_
 
 #include "gparam.h"
+#include "abs2rel.h"
 #include "conf.h"
 #include "dbop.h"
 #include "defined.h"
